--- a/src/app/components/food/food.component.html
+++ b/src/app/components/food/food.component.html
@@ -1,5 +1,5 @@
 <section>
-  <mat-card class="food-card">
+  <div class="food-card">
     <img
       [src]="foodData.imagem"
       alt="{{ foodData.descricao }}"
@@ -14,5 +14,5 @@
       <p><strong>Lipídios:</strong> {{ foodData.descricao }}</p>
       <p><strong>Colesterol:</strong> {{ foodData.colesterol }}</p>
     </mat-card-content>
-  </mat-card>
+  </div>
 </section>
