--- a/src/app/components/foods/foods.component.html
+++ b/src/app/components/foods/foods.component.html
@@ -3,7 +3,7 @@
   <h3 class="section-title">Informações Nutricionais</h3>
   <div class="subtitle-underline"></div>
   <div class="results-container">
-    <h2>Resultados (por 100 gramas)</h2>
+    <h2 class="section-subtitle">Resultados (por 100 gramas)</h2>
     <section class="food-results">
       <app-food *ngFor="let food of foodList" [foodData]="food"></app-food>
     </section>
