--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -15,6 +15,10 @@
   }
 }
 
+.logo {
+  font-size: 2rem;
+}
+
 /* Conteúdo do header */
 .header-inner-content {
   max-width: 1300px; /* Largura máxima */
